@@ -49,6 +49,7 @@ Revision 0.3.0, released XX-XX-2021
 - Add RFC6962 providing Certificate Transparency
 - Add RFC4059 providing Warranty Certificate Extension
 - Add RFC4998 providing Evidence Record Syntax (ERS)
+- Add RFC5544 providing the TimeStampedData Content Type
 
 Revision 0.2.8, released 16-11-2019
 -----------------------------------
